--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   /* flex-direction: row; */
   align-items: center;
   justify-content: center;
+  background: linear-gradient(to right, red, pink);
  
 }
 
@@ -22,7 +23,8 @@ width: 200px;
 
 }
 .Moviecard{
-  background-color: blue;
+  background-color: darkred;
+  border-radius: 5%;
  
 }
 .Movielist{
@@ -31,4 +33,37 @@ width: 200px;
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
+}
+button{
+  height: 40px;
+  width: 100px;
+  font-size: large;
+  font-display:  rgba(70, 140, 219, 0.637);
+  background-color: brown;
+  color: black;
+  border-radius: 8%;
+}
+button:hover{
+  background-color: darkolivegreen;
+}
+
+.AddMov {
+  margin: 50px 60px 75px 0;
+
+}
+
+.Forma{
+  background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.descrip{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.vid{
+  height: 1320px;
+  width: 700px ;
 }
